# gcc-oldland

./: .gitignore  Makefile.in  Makefile.tpl  config.sub  configure  configure.ac
contrib/: config-list.mk
gcc/: Makefile.in  cgraphunit.c  config.gcc  config.in  configure  configure.ac  gcc.c  lto-cgraph.c  lto-streamer.h  lto-wrapper.c  omp-low.c  passes.c
gcc/common/config/oldland/: oldland-common.c
gcc/config/intelmic/: mkoffload.c
gcc/config/moxie/: moxie.c
gcc/config/oldland/: oldland-protos.h  oldland.c  oldland.h  oldland.md  oldland.opt  rtems.h  t-oldland
gcc/doc/: tm.texi  tm.texi.in
gcc/lto/: lto-partition.c  lto.c
libgcc/: Makefile.in  config.host
libgcc/config/oldland/: sfp-machine.h  t-oldland
libgomp/: Makefile.in  config.h.in  configure  configure.ac  env.c  target.c
libgomp/testsuite/: Makefile.am  Makefile.in
libgomp/testsuite/lib/: libgomp.exp
libgomp/testsuite/libgomp.c/: target-7.c
libgomp/testsuite/libgomp.c++/: target-10.C  target-11.C  target-12.C  target-13.C  target-14.C  target-15.C  target-16.C  target-17.C  target-18.C  target-4.C  target-5.C  target-6.C  target-7.C  target-8.C  target-9.C  target-task-1.C  target-task-2.C  target-teams-1.C
libgomp/testsuite/libgomp.fortran/: target-task-1.f90  target10.f90  target11.f90  target12.f90  target13.f90  target14.f90  target15.f90  target16.f90  target17.f90  target18.f90  target19.f90  target20.f90  target21.f90  target22.f90  target9.f90
liboffloadmic/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
liboffloadmic/plugin/: Makefile.am  Makefile.in  configure  configure.ac  libgomp-plugin-mic.cpp
liboffloadmic/runtime/emulator/: coi_common.h  coi_host.cpp
lto-plugin/: lto-plugin.c
